# sf_to_supabase

./: .gitignore  .replit  ARCHITECTURE.md  CLOUDMAILIN_SETUP.md  app.py  db_setup.py  main.py  migrate_to_upsert.py  pyproject.toml  replit.md  test_cloudmailin_webhook.py  test_contacts_sample.csv
Load Scripts/: README.md
Mappings/: README.md  contacts.yaml  contacts_with_jobs_joined.yaml  form_submission.yaml  job_applicant_history_events.yaml  job_applicants.yaml  jobs_and_placement.yaml  placement_history_events.yaml
QA scripts/: README.md
Reports/: README.md
Schemas/: README.md
Schemas/staging/contacts/: constraints_and_indexes.md  operational_notes.md  schema_spec.md  table_design.md
Schemas/staging/contacts_with_jobs/: constraints_and_indexes.md  operational_notes.md  schema_spec.md  table_design.md
Schemas/staging/form_submission/: constraints_and_indexes.md  operational_notes.md  schema_spec.md  table_design.md
Schemas/staging/job_applicant/: contraints_and_indexes.md  operational_notes.md  schema_spec.md  table_design.md
Schemas/staging/job_applicant_history/: contraints_and_indexes.md  operational_notes.md  schema_spec.md  table_design.md
Schemas/staging/jobs_and_placements/: constraints_and_indexes.md  operational_notes.md  schema_spec.md  table_design.md
Schemas/staging/placement_history/: contraints_and_indexes.md  (+3 more)
etl/: csv_utils.py  db_connection.py  encoding_utils.py  loader.py  mapper.py  notifications.py  transformer.py  validator.py
static/css/: style.css
templates/: base.html  history.html  index.html  webhook_activity.html
